# aruco_models

./: CMakeLists.txt  README.md  package.xml
launch/: aruco_robot_test.launch.py  aruco_test_world.launch.py
models/aruco-0/: model.config  model.sdf
models/aruco-0/materials/scripts/: aruco.material
models/aruco-1/: model.config  model.sdf
models/aruco-1/materials/scripts/: aruco.material
models/aruco-2/: model.config  model.sdf
models/aruco-2/materials/scripts/: aruco.material
models/aruco-3/: model.config  model.sdf
models/aruco-3/materials/scripts/: aruco.material
models/aruco-4/: model.config  model.sdf
models/aruco-4/materials/scripts/: aruco.material
robot_description/: aruco_test_robot.urdf.xacro
scripts/: generate_gazebo_models.py  generate_gazebo_models_advanced.py  generate_simple_models.py
src/: generate_aruco_markers.cpp  generate_aruco_markers_advanced.cpp
worlds/: aruco_test.world  aruco_test_improved.world
